argocd/medicure-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medicure
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: medicure
  template:
    metadata:
      labels:
        app: medicure
    spec:
      containers:
        - name: medicure
          image: 3.83.241.115:30091/medicure-app:${IMAGE_TAG}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: nexus-creds
