argocd/service.yml
apiVersion: v1
kind: Service
metadata:
  name: medicure
  namespace: prod
spec:
  selector:
    app: medicure
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30900
  type: NodePort
